# TouchRelay

./: .gitignore  Cargo.toml  README.md  build.rs
src/: assets.rs  handler.rs  main.rs  menu.rs  startup.rs
static/: app.js  index.html  style.css
