[package]
name = "touch-relay"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "touch-relay"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
enigo = "0.6.1"
tray-icon = "0.18"
image = "0.25"
winit = "0.30"
open = "5.3"
local-ip-address = "0.6"
winreg = "0.52"

[build-dependencies]
winres = "0.1"
